Compositor Filter and Scaling Issue #63176

Closed
opened 2019-04-01 12:06:11 +02:00 by Marc Zbinden · 5 comments

System Information
Operating system: Windows 10 Pro 64bit
Graphics card: Geforce RTX 2080TI

Blender Version
Broken: 2.7, d7cecc2ba3 2019-03-20
Worked: (optional)

Short description of error
Compositor produces artefact when filter and scaling image

Exact steps for others to reproduce the error

  1. In the compositor add two Images.
  2. One Image has 50% of the resolution of the other (for example: 1440p and 720p)
  3. Add "filter - fast gaussian" or "filter - soften" after the node with the small image.
  4. Add "distort - transform" or "distort - scale" after blur filter and scale image 2 times to fit large image.
  5. Mix two Images with colormix (add or mix)

There are black vertical and horizintal artefacts in the result which disapear when set the scaling to slightly above 2 times (for example 2.01)

  1. place blur filter after scaling node.

If the blur filter is instead inserted after the scaling the small image gets cropped to its original size and doesn't fit.
I upload a blend file with to packed images and the node setup. After open the file I had to reconnect the last node to the viewer to render the backdrop.

Compositor Filter Glitch.blend

**System Information** Operating system: Windows 10 Pro 64bit Graphics card: Geforce RTX 2080TI **Blender Version** Broken: 2.7, d7cecc2ba3f6 2019-03-20 Worked: (optional) **Short description of error** Compositor produces artefact when filter and scaling image **Exact steps for others to reproduce the error** 1. In the compositor add two Images. 2. One Image has 50% of the resolution of the other (for example: 1440p and 720p) 4. Add "filter - fast gaussian" or "filter - soften" after the node with the small image. 5. Add "distort - transform" or "distort - scale" after blur filter and scale image 2 times to fit large image. 6. Mix two Images with colormix (add or mix) There are black vertical and horizintal artefacts in the result which disapear when set the scaling to slightly above 2 times (for example 2.01) 7. place blur filter after scaling node. If the blur filter is instead inserted after the scaling the small image gets cropped to its original size and doesn't fit. I upload a blend file with to packed images and the node setup. After open the file I had to reconnect the last node to the viewer to render the backdrop. [Compositor Filter Glitch.blend](https://archive.blender.org/developer/F6905084/Compositor_Filter_Glitch.blend)
Author

Added subscriber: @MarcZbinden

Added subscriber: @MarcZbinden

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Jeroen Bakker was assigned by Sebastian Parborg 2019-04-02 10:25:07 +02:00

I can confirm that it seem to be some lines in the result:
screenshot.png

I can confirm that it seem to be some lines in the result: ![screenshot.png](https://archive.blender.org/developer/F6906652/screenshot.png)

This issue was referenced by 9f5ec31ac0

This issue was referenced by 9f5ec31ac09ffc03189c4f2cb500930a440a606a
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63176
No description provided.