Fix T63176: Compositor stipes when scaling